[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/interface/stats/bar/exp_bar_background.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/stats/bar/health_bar.png" type="Texture" id=2]
[ext_resource path="res://assets/interface/stats/bar/health_bar_background.png" type="Texture" id=3]
[ext_resource path="res://assets/interface/stats/bar/mana_bar_background.png" type="Texture" id=4]
[ext_resource path="res://assets/interface/stats/bar/mana_bar.png" type="Texture" id=5]
[ext_resource path="res://assets/interface/stats/bar/exp_bar.png" type="Texture" id=6]
[ext_resource path="res://scripts/UI/player/bar_container.gd" type="Script" id=7]

[node name="BarContainer" type="Control" groups=["bar_container"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="HealthBar" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 5.0
texture = ExtResource( 3 )

[node name="Bar" type="TextureProgress" parent="HealthBar"]
margin_left = 17.0
margin_top = 7.0
margin_right = 60.0
margin_bottom = 9.0
value = 50.0
texture_progress = ExtResource( 2 )

[node name="ManahBar" type="TextureRect" parent="."]
margin_left = 19.0
margin_top = 20.0
texture = ExtResource( 4 )

[node name="Bar" type="TextureProgress" parent="ManahBar"]
margin_left = 15.0
margin_top = 7.0
margin_right = 47.0
margin_bottom = 8.0
value = 50.0
texture_progress = ExtResource( 5 )

[node name="ExperienceBar" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -69.0
margin_top = 5.0
margin_right = -5.0
texture = ExtResource( 1 )

[node name="Bar" type="TextureProgress" parent="ExperienceBar"]
margin_left = 4.0
margin_top = 7.0
margin_right = 47.0
margin_bottom = 9.0
value = 50.0
texture_progress = ExtResource( 6 )
fill_mode = 1

[node name="Label" type="Label" parent="ExperienceBar"]
margin_left = 9.0
margin_top = 17.0
margin_right = 49.0
margin_bottom = 31.0
text = "LV: "

[node name="Label2" type="Label" parent="ExperienceBar"]
margin_left = 30.0
margin_top = 17.0
margin_right = 47.0
margin_bottom = 31.0
text = "1"
align = 2

[node name="Tween" type="Tween" parent="."]
